--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,8 @@
     <title>Microposts</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    
+    <%# こっちが上 %>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
 
     <%= stylesheet_link_tag  'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -21,7 +22,7 @@
 
 
     <div class="container">
-     
+
 
       <%= yield %>
     </div>
