--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -1,5 +1,12 @@
 <div class="center jumbotron">
   <div class="text-center">
-    <h1>Welcome to the Employee</h1>
+    <h1 class="display-4 text-black-50 bold mb-5">Welcome to the Employee</h1>
+  </div>
+
+  <div>
+    <%= link_to 'Log in check &gt;&gt;'.html_safe, { action: 'login_check' } %>
+  </div>
+  <div>
+    <%= link_to 'Sign out &gt;&gt;'.html_safe, destroy_account_session_path, method: :delete %>
   </div>
 </div>
