kaminari config css

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -23,3 +23,10 @@ h1 {
     color: darkgray;
     margin: 25px 0px;
 }
+
+/* ページネーション */
+.page { padding:5px; border:1px lightblue solid; }
+.first { padding:5px; border:1px lightblue solid; }
+.prev { padding:5px; border:1px lightblue solid; }
+.next { padding:5px; border:1px lightblue solid; }
+.last { padding:5px; border:1px lightblue solid; }
