department destroy ok

--- a/app/views/departments/dep_get.html.erb
+++ b/app/views/departments/dep_get.html.erb
@@ -1,2 +1,5 @@
 <h1>Departments#dep_get</h1>
 <p>Find me in app/views/departments/dep_get.html.erb</p>
+
+
+<%= label = @action == "add" ? '新規作成ページ' : '編集ページ' %>
