--- a/app/views/departments/display.html.erb
+++ b/app/views/departments/display.html.erb
@@ -5,14 +5,14 @@
 <p>部署データを<%= label %>します</p>
 
 
-<%= form_with(model: @department, method: :post,  url: {controller: 'departments', action: 'dep_post', department_id: @department.department_id }) do |form| %>
+<%= form_with(model: @department, method: :post,  url: {controller: 'departments', action: 'dep_manage', department_id: @department.department_id }) do |form| %>
 
   <div class="form-group">
     <label for="department_name">部署名</label>
     <%= form.text_field :department_name , { class: "form-control" } %>
   </div>
 
-  <%= hidden_field_tag :action_method , "add" %>
+  <%= hidden_field_tag :action_method , label == '新規作成' ? "add" : "edit" %>
 
   <%= form.submit class: "btn btn-primary" %>
 <% end %>
