--- a/app/views/departments/index.html.erb
+++ b/app/views/departments/index.html.erb
@@ -1,6 +1,8 @@
 <h1 class="eisplay-4 text-primary">部署一覧ページ</h1>
 
-<p style="color:red"><%= @f_msg %></p>
+
+<p class="f_msg"><%= @f_msg %></p>
+
 
 <%# any?で、もし、@departmentsが中身が空かどうかをチェックし、空ではなかったら、出力する %>
 <% if @departments.any? then %>
