--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -37,3 +37,19 @@ h1 {
 .prev { padding:5px; border:1px lightblue solid; }
 .next { padding:5px; border:1px lightblue solid; }
 .last { padding:5px; border:1px lightblue solid; }
+
+/* バリデーションのエラーメッセージのリスト */
+.validation_err li {
+    color: rgb(235, 124, 142);
+    font-size: 70%;
+}
+
+/* データベースに保存できなかった時のメッセージ */
+.f_msg {
+    font-size: 60%;
+    border: 1px solid blue;
+    padding: 14px;
+    background-color: #ccf;
+    border-radius: 5px;
+    color: rgb(17, 17, 17);
+}
