form-group form-inline row

--- a/app/views/departments/index.html.erb
+++ b/app/views/departments/index.html.erb
@@ -38,7 +38,7 @@
           <%= hidden_field_tag :action_method , "delete" %>
 
           <%= form.hidden_field :department_id => dep.department_id %>
-          <%= form.submit "削除", class: "btn btn-danger" , data: {confirm: "本当に削除しますか？" }%>
+          <%= form.submit "削除", class: "btn btn-danger"   %>
         <% end %>
       </td>
 
