--- a/app/views/employees/emp_manage.html.erb
+++ b/app/views/employees/emp_manage.html.erb
@@ -1,2 +1,4 @@
-<h1>Employees#emp_manage</h1>
+
+
+<h1 class="display-4 text-primary">社員</h1>
 <p>Find me in app/views/employees/emp_manage.html.erb</p>
