--- a/app/views/employees/_form.html.erb
+++ b/app/views/employees/_form.html.erb
@@ -1,1 +1,10 @@
- <%# form_with(model: employees というふうに@をつけないようにすること %>
+<%=form_with(model: employee, method: :post, url: {controller: 'employees', action: 'emp_manage', employee_id: employee.employee_id } ) do |form| %>
+
+  <div class="form-group form-inline row">
+    <%= form.label :name , "名前", {class: "col-sm-2 col-form-label " }%>
+    <%= form.text_field :name, {class: "col-sm-10 form-control " } %>
+  </div>
+
+
+
+<% end %>
