--- a/app/views/employees/_form.html.erb
+++ b/app/views/employees/_form.html.erb
@@ -1,8 +1,46 @@
 <%=form_with(model: employee, method: :post, url: {controller: 'employees', action: 'emp_manage', employee_id: employee.employee_id } ) do |form| %>
 
   <div class="form-group form-inline row">
-    <%= form.label :name , "名前", {class: "col-sm-2 col-form-label " }%>
-    <%= form.text_field :name, {class: "col-sm-10 form-control " } %>
+    <%= form.label :name , "名前:", {class: "col-sm-3 col-form-label " }%>
+    <%= form.text_field :name, {class: "col-sm-9 form-control " } %>
+  </div>
+
+  <div class="form-group form-inline row">
+    <%= form.label :age, "年齢:", {class: "col-sm-3 col-form-label" } %>
+    <%= form.text_field :age, {class: "col-sm-9 form-control" } %>
+  </div>
+
+  <div class="form-group form-inline row">
+    <%= form.label :gender, "性別:", {class: "col-sm-3 col-form-label" } %>
+    <%= form.text_field :gender, {class: "col-sm-9 form-control" } %>
+  </div>
+
+
+  <div class="form-group form-inline row">
+    <%= form.label :zip_number, "郵便番号:", {class: "col-sm-3 col-form-label"} %>
+    <%= form.text_field :zip_number, {class: "col-sm-9 form-control" } %>
+  </div>
+
+  <div class="form-group form-inline row">
+    <%= form.label :pref, "都道府県:", {class: "col-sm-3 col-form-label" } %>
+    <%= form.select :pref, options_for_select(['北海道','青森県','岩手県','宮城県','秋田県','山形県','福島県','茨城県','栃木県','群馬県','埼玉県','千葉県','東京都','神奈川県','新潟県','富山県','石川県','福井県','山梨県','長野県','岐阜県','静岡県','愛知県','三重県','滋賀県','京都府','大阪府','兵庫県','奈良県','和歌山県','鳥取県','島根県','岡山県','広島県','山口県','徳島県','香川県','愛媛県','高知県','福岡県','佐賀県','長崎県','熊本県','大分県','宮崎県','鹿児島県','沖縄県']),
+    {size: 5, class: "form-control col-sm-9"}  %>
+    <%= form.submit("Click", class: "pref_click") %>
+  </div>
+
+  <div class="form-group form-inline row">
+    <%= form.label :address1, "住所1(市区町村郡):", {class: "col-sm-3 col-form-label" } %>
+    <%= form.text_field :address1, {class: "col-sm-9 form-control"} %>
+  </div>
+
+  <div class="form-group form-inline row">
+    <%= form.label :address2, "住所2(町名番地):", {class: "col-sm-3 col-form-label" } %>
+    <%= form.text_field :address2, {class: "col-sm-9 form-control"} %>
+  </div>
+
+  <div class="form-group form-inline row">
+    <%= form.label :address3, "住所3(建物名や番号):", {class: "col-sm-3 col-form-label" } %>
+    <%= form.text_field :address3, {class: "col-sm-9 form-control"} %>
   </div>
 
 
