--- a/app/views/employees/_form.html.erb
+++ b/app/views/employees/_form.html.erb
@@ -1,5 +1,9 @@
 <%=form_with(model: employee, method: :post, url: {controller: 'employees', action: 'emp_manage', employee_id: employee.employee_id } ) do |form| %>
 
+  <%= hidden_field_tag action_method: action_method %>
+  <%= form.hidden_field employee_id: employee.employee_id %>
+  <%= form.hidden_field photo_id: employee.photo_id %>
+
   <div class="form-group form-inline row">
     <%= form.label :name , "名前:", {class: "col-sm-3 col-form-label " }%>
     <%= form.text_field :name, {class: "col-sm-9 form-control " } %>
@@ -11,8 +15,15 @@
   </div>
 
   <div class="form-group form-inline row">
-    <%= form.label :gender, "性別:", {class: "col-sm-3 col-form-label" } %>
-    <%= form.text_field :gender, {class: "col-sm-9 form-control" } %>
+    <%= label_tag :age, "性別:", {class: "col-sm-3 col-form-label" } %>
+    <span class="mr-4">
+    <%= form.radio_button :gender, 1, {class: " form-control" } %>
+    <%= form.label :gender, "男性",  {value: 1, style: "display: inline-block;" ,class: " col-form-label" } %>
+    </span>
+    <span>
+    <%= form.radio_button :gender, 2, {class: " form-control" } %>
+    <%= form.label :gender, "女性",  {value: 2, style: "display: inline-block;" ,class: " col-form-label" } %>
+    </span>
   </div>
 
 
