--- a/app/views/employees/display.html.erb
+++ b/app/views/employees/display.html.erb
@@ -2,7 +2,7 @@
 <h1 class="display-4 text-primary">社員<%= label %>ページ</h1>
 <p></p>
 
-<%= render 'form', employee: @employee, action_method: @action_method %>
+<%= render 'form', employee: @employee, action_method: @action_method, photo_data: @photo_data  %>
 <div>
 <%= button_to "キャンセル", {controller: 'employees', action: 'index'}, {method: :get, class: "btn btn-primary offset-3 w-25", params: { f_msg: "入力をキャンセルしました"}} %>
 </div>
